Fixed margin too large on body

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
+  margin: 0;
 }
 
 h1#title {
